# erpnext_cyprus

./: README.md  pyproject.toml
erpnext_cyprus/: hooks.py  modules.txt
erpnext_cyprus/erpnext_cyprus/report/moss_vat_returns/: moss_vat_returns.json
erpnext_cyprus/erpnext_cyprus/report/vat_statement/: vat_statement.js  vat_statement.json  vat_statement.py
erpnext_cyprus/erpnext_cyprus/report/vies_statement/: vies_statement.js  vies_statement.json  vies_statement.py
erpnext_cyprus/erpnext_cyprus/workspace/cyprus_localization/: cyprus_localization.json
